# koboapi

./: MANIFEST.in  Makefile  choices.json  data.json  opt.txt  pyproject.toml  questions.json  requirements.txt  survey.json  test_export.xlsx  untitled.codediagram
koboapi/: __init__.py  builder.py  client.py  data_processor.py  exceptions.py  exporter.py  models.py  structure_parser.py  utils.py  wrapper.py
tests/: export.py  smoke.py  url.py
