[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koboapi"
version = "0.1.0"
description = "A Python package for interacting with KoBo Toolbox API with DataFrame export capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Diego Mora", email = "morabdiego@gmail.com"}
]
keywords = ["kobo", "kobotoolbox", "api", "survey", "data", "pandas", "dataframe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "python-dotenv",
]
test = [
    "pytest>=6.0",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/morabdiego/koboapi"
"Bug Reports" = "https://github.com/morabdiego/koboapi/issues"
"Source" = "https://github.com/morabdiego/koboapi"
"Documentation" = "https://github.com/morabdiego/koboapi#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["koboapi*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
koboapi = ["*.json", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
